[workspace]
resolver = "2"
members = [
    "crates/llama_cpp_sys",
    "crates/llama_cpp",
    "crates/llama_cpp_tests"
]

[workspace.dependencies]
bindgen = "0.69.1"
blake3 = "1.5.0"
cc = "1.0.83"
ctor = "0.2.5"
data-encoding = "2.4.0"
derive_more = "0.99.17"
directories = "5.0.1"
flume = "0.11.0"
link-cplusplus = "1.0.9"
llama_cpp = "^0.3"
llama_cpp_sys = "^0.3"
num_cpus = "1.16.0"
once_cell = "1.19.0"
reqwest = "0.11.22"
thiserror = "1.0.50"
tinyvec = "1.6.0"
tokio = "1.33.0"
tracing = "0.1.39"

[patch.crates-io]
llama_cpp = { path = "crates/llama_cpp" }
llama_cpp_sys = { path = "crates/llama_cpp_sys" }
