[workspace]
resolver = "2"
members = [
    "crates/llama_cpp_sys",
    "crates/llama_cpp",
    "crates/llama_cpp_tests"
]

[workspace.dependencies]
bindgen = "0.69.1"
cc = "1.0.83"
ctor = "0.2.5"
derive_more = "0.99.17"
flume = "0.11.0"
link-cplusplus = "1.0.9"
llama_cpp = { path = "crates/llama_cpp", default-features = false }
llama_cpp_sys = { path = "crates/llama_cpp_sys", default-features = false }
num_cpus = "1.16.0"
once_cell = "1.19.0"
thiserror = "1.0.50"
tokio = "1.34.0"
tracing = "0.1.40"
