[package]
name = "llama_cpp"
version = "0.1.0"
description = "High-level bindings to llama.cpp with a focus on just being really, really easy to use"
edition = "2021"
authors = ["Dakota Thompson <me@scriptis.net>"]
repository = "https://github.com/binedge/llama_cpp-rs"
license = "MIT OR Apache-2.0"
readme = "../../README.md"
publish = true

[dependencies]
ctor = "0.2.5"
derive_more = "0.99.17"
flume = "0.11.0"
llama_cpp_sys = { version = "^0.2.0", path = "../llama_cpp_sys" }
num_cpus = "1.16.0"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["sync"] }
tracing = "0.1.39"
