[package]
name = "llama_cpp_sys"
version = "0.2.2"
description = "Automatically-generated bindings to llama.cpp's C API"
edition = "2021"
authors = ["Dakota Thompson <me@scriptis.net>"]
repository = "https://github.com/binedge/llama_cpp-rs"
license = "MIT OR Apache-2.0"
readme = "../../README.md"
publish = true

[dependencies]
link-cplusplus = "1.0.9"

[build-dependencies]
bindgen = "0.69.1"
cmake = "0.1.50"
