[package]
name = "llama_cpp_tests"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
blake3 = { workspace = true }
data-encoding = { workspace = true }
directories = { workspace = true }
llama_cpp = { workspace = true, default-features = false, features = ["native"] }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["full"] }
