[package]
name = "llama_cpp_tests"
version = "0.3.2"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
futures = { workspace = true }
image = "0.25.1"
llama_cpp = { version = "^0.3.2", path = "../llama_cpp", default-features = false, features = ["native", "compat"] }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
vulkan = ["llama_cpp/vulkan"]
cuda = ["llama_cpp/cuda"]
